@@ -77,6 +77,12 @@ Version 1.7.8
 - BUG: Issue #360: Crash using blocks. (Stefan)
 - BUG: Issue #361: merge log messages not
        generated for 'record only' merges. (Stefan)
+- BUG: Issue #362: crash when adding/removing
+       properties. (Stefan)
+- CHG: Issue #363: make crash reporter optional
+       during install. (Stefan)
+- BUG: Issue #365: moved line detection
+       can segfault. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
